[package]
name = "proot-rs"
version = "0.1.0"
authors = ["vincenthage"]
build = "src/build_loader.rs"
edition = "2018"

[dependencies]
libc = "0.2.25"
nix = "0.9.0"
clap = "2.25.1"
sc = "0.2.3"
lazy_static = "1.4.0"
byteorder = "1.1.0"
bstr = "0.2.15"

[build-dependencies]
gcc = { git = "https://github.com/vincenthage/gcc-rs", branch = "master" }
