# cargo-features = ["extra-link-arg"]

[package]
name = "loader-shim"
version = "0.1.0"
authors = ["PRoot Developers <proot_me@googlegroups.com>"]
edition = "2018"

[dependencies]
sc = { git = "https://github.com/japaric/syscall.rs.git", rev = "431ecf9db8cafa48c9bb268bf2fdbe8141d902f6" }
rlibc = { version = "1.0", optional = true }

[features]
build-binary = [ "rlibc" ]

[[bin]]
name = "loader-shim"
required-features = ["build-binary"] # crate `rlibc` is required only when build executable files