[package]
name = "proot-rs"
version = "0.1.0"
authors = ["PRoot Developers <proot_me@googlegroups.com>"]
edition = "2018"

[dependencies]
libc = "0.2.25"
nix = "0.20.0"
clap = "2.25.1"
sc = { git = "https://github.com/KB5201314/syscall.rs.git", rev = "cf49872" }
lazy_static = "1.4.0"
byteorder = "1.1.0"
log = "0.4.14"
env_logger = "0.8.3"
loader-shim = { path = "../loader-shim" }

[dev-dependencies]
nc = "0.7.5"
