[package]
name = "proot-rs"
version = "0.1.0"
authors = ["PRoot Developers <proot_me@googlegroups.com>"]
edition = "2018"

[dependencies]
libc = "0.2.25"
nix = "0.24.1"
clap = "2.25.1"
sc = { git = "https://github.com/japaric/syscall.rs.git", rev = "431ecf9db8cafa48c9bb268bf2fdbe8141d902f6" }
lazy_static = "1.4.0"
byteorder = "1.1.0"
log = "0.4.14"
env_logger = "0.8.3"
loader-shim = { path = "../loader-shim" }

[dev-dependencies]
nc = "0.7.5"
